# erudit-bot

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 03c79bbb548e_delete_telegram_id.py  e17fb094c3a0_init.py
src/: __init__.py  config.py
src/api/: __init__.py  schemas.py
src/api/routes/: applications.py  auth.py  events.py  notifications.py  users.py
src/bot/: __init__.py  keyboards.py  messages.py
src/bot/handlers/: __init__.py  applications.py  commands.py  events.py  profile.py
src/bot/notification/: __init__.py  notify.py
src/database/: __init__.py  models.py  queries.py
